fix view book on request, on proccess, completed book, and new query for search

--- a/app/src/main/res/layout/cv_discover_gig.xml
+++ b/app/src/main/res/layout/cv_discover_gig.xml
@@ -11,7 +11,8 @@
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/border_orange">
         <FrameLayout
             android:id="@+id/frame_gig"
             android:layout_width="match_parent"
