--- a/app/src/main/res/layout/lv_on_proccess.xml
+++ b/app/src/main/res/layout/lv_on_proccess.xml
@@ -3,13 +3,21 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/default_square">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="4dp"
+        android:layout_gravity="center">
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="3"
         android:rowCount="4"
         android:padding="10dp">
+
+
         <com.github.siyamed.shapeimageview.CircularImageView
             android:layout_row="0"
             android:layout_rowSpan="3"
@@ -51,17 +59,15 @@
             android:textColor="@color/colorTextDark"
             android:layout_marginLeft="10dp"/>
 
+    </GridLayout>
         <TextView
             android:id="@+id/tv_verify_onproccess"
-            android:gravity="center_horizontal"
-            android:layout_columnSpan="2"
-            android:layout_column="1"
-            android:layout_row="3"
+            android:gravity="center"
             android:text="Verify"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
-
-    </GridLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="45dp" />
+    </FrameLayout>
 
 
 </LinearLayout>
