--- a/app/src/main/res/layout/lv_onrequestbook.xml
+++ b/app/src/main/res/layout/lv_onrequestbook.xml
@@ -2,7 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:gravity="top"
+    android:background="@drawable/default_square">
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
