--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="primaryDark">#333333</color>
     <color name="primaryButton">#ff4400</color>
     <color name="primaryButton2">#ff9955</color>
+    <color name="green">#00ff00</color>
 </resources>
