--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -14,7 +14,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo_v2"
+        android:src="@mipmap/ic_gighublogo"
         android:layout_gravity="center|center_vertical"
         android:layout_marginBottom="75dp"/>
     <TextView
