--- a/app/src/main/res/layout/cv_grup_band.xml
+++ b/app/src/main/res/layout/cv_grup_band.xml
@@ -49,7 +49,7 @@
                 android:layout_column="0"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/ic_person_black_48dp"
+                android:src="@drawable/default_user"
                 app:siBorderWidth="2dp"
                 app:siBorderColor="#ddd"
                 android:layout_margin="5dp"/>
