--- a/app/src/main/res/layout/fragment_discover_musician_main.xml
+++ b/app/src/main/res/layout/fragment_discover_musician_main.xml
@@ -150,7 +150,7 @@
             android:layout_row="11"
             android:layout_column="1"
             android:ems="10"
-            android:text="Select Genres"
+            android:hint="Select Genres"
             android:focusable="false"/>
 
         <android.support.v4.widget.Space
