--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -135,6 +135,27 @@
                 android:text=""/>
         </android.support.design.widget.TextInputLayout>
 
+        <TextView
+            android:layout_margin="5dp"
+            android:text="genres"
+            android:id="@+id/tv_genres_activityprofile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:id="@+id/ll_genre_musician_activityprofile"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="150dp">
+
+            <GridView
+                android:id="@+id/lv_genres_activityprofile"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_marginBottom="20dp"
+                android:numColumns="2"></GridView>
+        </LinearLayout>
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
