--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -156,6 +156,21 @@
                 android:numColumns="2"></GridView>
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/ll_bank_activityprofile"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/btn_load_bank_activityprofile"
+                android:background="@drawable/button_border2"
+                android:text="Edit Bank"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </LinearLayout>
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
