--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -37,7 +37,7 @@ android:layout_margin="7dp">
         <ImageView
             android:src="@android:drawable/ic_menu_gallery"
             android:background="@drawable/transparent_dark"
-            android:id="@+id/btn_img_cover_band_grupband"
+            android:id="@+id/img_photo_gig_bookdetails"
             android:layout_width="match_parent"
             android:scaleType="centerCrop"
             android:fitsSystemWindows="true"
@@ -62,6 +62,7 @@ android:layout_margin="7dp">
         android:rowCount="3"
         android:padding="10dp">
         <com.github.siyamed.shapeimageview.CircularImageView
+            android:id="@+id/img_photo_bookdetails"
             android:layout_row="0"
             android:layout_rowSpan="3"
             android:layout_column="0"
@@ -283,12 +284,22 @@ android:layout_margin="7dp">
         </LinearLayout>
 
         <Button
+            android:background="@drawable/button_border2"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
             android:id="@+id/btn_konfirmasi_pembayaran_bookingdetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Confirm Payment"/>
+
+        <Button
+            android:background="@drawable/button_border2"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="20dp"
+            android:id="@+id/btn_konfirmasi_permintaan_bookingdetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Confirm Request"/>
 
     </LinearLayout>
 
