--- a/app/src/main/res/layout/activity_musician.xml
+++ b/app/src/main/res/layout/activity_musician.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/ava"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
             app:layout_collapseMode="parallax"/>
