--- a/app/src/main/res/layout/lv_onrequestbook.xml
+++ b/app/src/main/res/layout/lv_onrequestbook.xml
@@ -4,54 +4,70 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="top"
     android:background="@drawable/default_square">
-    <GridLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="3"
-        android:rowCount="3"
-        android:padding="10dp">
-        <com.github.siyamed.shapeimageview.CircularImageView
-            android:layout_row="0"
-            android:layout_rowSpan="3"
-            android:layout_column="0"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ava"
-            app:siBorderWidth="2dp"
-            app:siBorderColor="#ddd"
-            android:layout_margin="5dp"
-            android:id="@+id/img1"/>
-        <TextView
-            android:id="@+id/tv_musician_name_onreqbook"
-            android:layout_column="1"
-            android:layout_row="0"
-            android:layout_width="wrap_content"
+        android:elevation="4dp"
+        android:layout_gravity="center">
+        <GridLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="The Black Adams"
-            android:textColor="@color/colorTextDark"
-            android:layout_marginLeft="10dp"/>
-        <TextView
-            android:id="@+id/tv_musician_hour_fee_onreqbook"
-            android:layout_column="1"
-            android:layout_row="1"
-            android:layout_columnSpan="2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:textColor="@color/colorTextDark"
-            android:text="Rp. 200.000 / Hours"
-            />
-        <TextView
-            android:id="@+id/tv_musician_genres_onreqbook"
-            android:layout_column="1"
-            android:layout_row="2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rock, Jazz"
-            android:textColor="@color/colorTextDark"
-            android:layout_marginLeft="10dp"/>
+            android:columnCount="3"
+            android:rowCount="4"
+            android:padding="10dp">
 
-    </GridLayout>
+
+            <com.github.siyamed.shapeimageview.CircularImageView
+                android:layout_row="0"
+                android:layout_rowSpan="3"
+                android:layout_column="0"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/default_user"
+                app:siBorderWidth="2dp"
+                app:siBorderColor="#ddd"
+                android:layout_margin="5dp"
+                android:id="@+id/img_onreqbook"/>
+            <TextView
+                android:id="@+id/tv_musician_name_onreqbook"
+                android:layout_column="1"
+                android:layout_row="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="The Black Adams"
+                android:textColor="@color/colorTextDark"
+                android:layout_marginLeft="10dp"/>
+            <TextView
+                android:id="@+id/tv_musician_hour_fee_onreqbook"
+                android:layout_column="1"
+                android:layout_row="1"
+                android:layout_columnSpan="2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:textColor="@color/colorTextDark"
+                android:text="Rp. 200.000 / Hours"
+                />
+            <TextView
+                android:id="@+id/tv_musician_genres_onreqbook"
+                android:layout_column="1"
+                android:layout_row="2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rock, Jazz"
+                android:textColor="@color/colorTextDark"
+                android:layout_marginLeft="10dp"/>
+
+        </GridLayout>
+        <TextView
+            android:id="@+id/tv_verify_onreqbook"
+            android:gravity="center"
+            android:text="Verify"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="45dp" />
+    </FrameLayout>
+
+
 </LinearLayout>
