--- a/app/src/main/res/layout/activity_group_band_profile.xml
+++ b/app/src/main/res/layout/activity_group_band_profile.xml
@@ -6,8 +6,6 @@ android:id="@+id/card_view"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_margin="7dp">
-
-
 <android.support.v7.widget.LinearLayoutCompat
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -100,6 +98,14 @@ android:layout_margin="7dp">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="posisi"/>
+
+    <Button
+        android:id="@+id/btn_add_anggota_groupbandprofileactivity"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_border2"
+        android:text="Add Musician to Group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </android.support.v7.widget.LinearLayoutCompat>
 
 
