--- a/app/src/main/res/layout/lv_musician_result.xml
+++ b/app/src/main/res/layout/lv_musician_result.xml
@@ -3,7 +3,12 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/border_orange">
+    android:background="#FFFFFF"
+    android:elevation="4dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp">
+
+
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
