fix add musician to group

--- a/app/src/main/res/layout/activity_add_position_musician.xml
+++ b/app/src/main/res/layout/activity_add_position_musician.xml
@@ -84,10 +84,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
+            android:id="@+id/btn_cancel_addpositionmusician"
+            android:background="@drawable/button_border"
             android:text="Cancel"
+            android:textColor="#ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
+            android:id="@+id/btn_add_position_addpositionmusician"
+            android:background="@drawable/button_border2"
             android:text="Add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
