--- a/app/src/main/res/layout/activity_group_band_profile.xml
+++ b/app/src/main/res/layout/activity_group_band_profile.xml
@@ -106,6 +106,14 @@ android:layout_margin="7dp">
         android:text="Add Musician to Group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btn_remove_anggota_groupbandprofileactivity"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_border2"
+        android:text="Remove Musician from Group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </android.support.v7.widget.LinearLayoutCompat>
 
 
