--- a/app/src/main/res/layout/activity_gig_money.xml
+++ b/app/src/main/res/layout/activity_gig_money.xml
@@ -35,6 +35,7 @@
             android:text="@string/your_gig_money"
             android:textAlignment="center"/>
         <TextView
+            android:id="@+id/tv_saldo_gigmoney"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30sp"
@@ -42,6 +43,7 @@
             android:textAlignment="center"/>
 
         <Button
+            android:id="@+id/btn_withdrawal_gigmoney"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/withdrawal"
