--- a/app/src/main/res/layout/activity_gig_money.xml
+++ b/app/src/main/res/layout/activity_gig_money.xml
@@ -50,7 +50,8 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/button_border2"/>
+            android:textColor="@color/colorAccent"
+            android:background="@drawable/button_border_white"/>
     </LinearLayout>
 
 </LinearLayout>
