--- a/app/src/main/res/layout/activity_register_as.xml
+++ b/app/src/main/res/layout/activity_register_as.xml
@@ -21,7 +21,7 @@
         android:id="@+id/btn_reg_as_org"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_white"
         android:textStyle="bold"
         android:textColor="@color/colorAccent"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -41,7 +41,7 @@
         android:id="@+id/btn_reg_as_msc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_white"
         android:textStyle="bold"
         android:textColor="@color/colorAccent"
         android:textAllCaps="true"
