--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_white"
         android:textColor="@color/colorAccent"
         android:text="@string/profile"/>
 
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_white"
         android:textColor="@color/colorAccent"
         android:text="@string/gig_money"/>
 
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_white"
         android:textColor="@color/colorAccent"
         android:text="@string/manager"/>
 
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_white"
         android:textColor="@color/colorAccent"
         android:text="@string/about"/>
 
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_white"
         android:textColor="@color/colorAccent"
         android:text="@string/term_of"/>
 
@@ -69,7 +69,7 @@
             android:id="@+id/btn_logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_border"
+            android:background="@drawable/button_border_white"
             android:textColor="@color/colorAccent"
             android:text="@string/logout" />
     </LinearLayout>
