--- a/app/src/main/res/layout/activity_add_position_musician.xml
+++ b/app/src/main/res/layout/activity_add_position_musician.xml
@@ -85,14 +85,14 @@
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn_cancel_addpositionmusician"
-            android:background="@drawable/button_border"
+            android:background="@drawable/button_border_white"
             android:text="Cancel"
             android:textColor="#ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
             android:id="@+id/btn_add_position_addpositionmusician"
-            android:background="@drawable/button_border2"
+            android:background="@drawable/button_border_black"
             android:text="Add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
