--- a/app/src/main/res/layout/activity_gig_offer_musician.xml
+++ b/app/src/main/res/layout/activity_gig_offer_musician.xml
@@ -87,7 +87,7 @@
 
     <Button
         android:layout_marginTop="40dp"
-        android:background="@drawable/button_border2"
+        android:background="@drawable/button_border_black"
         android:text="Submit"
         android:id="@+id/btn_submit_gigoffermusician"
         android:layout_marginLeft="20dp"
