--- a/app/src/main/res/layout/activity_group_band_profile.xml
+++ b/app/src/main/res/layout/activity_group_band_profile.xml
@@ -102,7 +102,7 @@ android:layout_margin="7dp">
     <Button
         android:id="@+id/btn_add_anggota_groupbandprofileactivity"
         android:layout_marginTop="20dp"
-        android:background="@drawable/button_border2"
+        android:background="@drawable/button_border_black"
         android:text="Add Musician to Group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -110,7 +110,7 @@ android:layout_margin="7dp">
     <Button
         android:id="@+id/btn_remove_anggota_groupbandprofileactivity"
         android:layout_marginTop="20dp"
-        android:background="@drawable/button_border2"
+        android:background="@drawable/button_border_black"
         android:text="Remove Musician from Group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
