--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -41,7 +41,7 @@
         android:text="@string/discover"
         android:textStyle="bold"
         android:textColor="@color/colorAccent"
-        android:background="@drawable/button_border" />
+        android:background="@drawable/button_border_white" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,7 +67,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
         android:textColor="@color/colorAccent"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_white"
         android:text="@string/join"/>
 
     <LinearLayout
