--- a/app/src/main/res/layout/activity_login_as_musician.xml
+++ b/app/src/main/res/layout/activity_login_as_musician.xml
@@ -68,7 +68,7 @@
             android:textStyle="bold"
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/button_border"
+            android:background="@drawable/button_border_white_negative"
             android:text="@string/cancel"/>
         <Button
             android:id="@+id/btn_login_login_msc"
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:background="@drawable/button_border"
+            android:background="@drawable/button_border_white"
             android:text="@string/login"/>
     </LinearLayout>
 
