--- a/app/src/main/res/layout/activity_musician_bank.xml
+++ b/app/src/main/res/layout/activity_musician_bank.xml
@@ -40,7 +40,8 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:background="@drawable/button_border2"
+        android:textColor="@color/colorAccent"
+        android:background="@drawable/button_border_white"
         android:text="Update Bank"
         android:id="@+id/btn_update_bank_musicianbank"
         android:layout_width="match_parent"
