--- a/app/src/main/res/layout/activity_register_as_organizer.xml
+++ b/app/src/main/res/layout/activity_register_as_organizer.xml
@@ -119,7 +119,7 @@
             android:textStyle="bold"
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/button_border"
+            android:background="@drawable/button_border_white"
             android:text="@string/cancel"/>
         <Button
             android:textColor="@color/colorAccent"
@@ -128,7 +128,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:background="@drawable/button_border"
+            android:background="@drawable/button_border_white"
             android:text="@string/register"/>
     </LinearLayout>
 
