--- a/app/src/main/res/layout/activity_remove_anggota_musician.xml
+++ b/app/src/main/res/layout/activity_remove_anggota_musician.xml
@@ -78,14 +78,14 @@
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btn_cancel_removeanggotamusician"
-                android:background="@drawable/button_border"
+                android:background="@drawable/button_border_white"
                 android:text="Cancel"
                 android:textColor="#ffffff"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <Button
                 android:id="@+id/btn_remove_anggota_removeanggotamusician"
-                android:background="@drawable/button_border2"
+                android:background="@drawable/button_border_black"
                 android:text="Remove"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
