--- a/app/src/main/res/layout/fragment_dialog_genre.xml
+++ b/app/src/main/res/layout/fragment_dialog_genre.xml
@@ -18,5 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/submit"
-        android:background="@drawable/button_border2"/>
+        android:textColor="@color/colorAccent"
+        android:background="@drawable/button_border_white"/>
 </LinearLayout>
