--- a/app/src/main/res/layout/fragment_gig_profile.xml
+++ b/app/src/main/res/layout/fragment_gig_profile.xml
@@ -44,7 +44,7 @@
         android:id="@+id/btn_offer_gig_gigprofile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_border2"
+        android:background="@drawable/button_border_black"
         android:text="Gig Offer"/>
 
     <Button
@@ -52,7 +52,7 @@
         android:id="@+id/btn_view_map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_border2"
+        android:background="@drawable/button_border_black"
         android:text="View In Map"/>
 
 </LinearLayout>
