--- a/app/src/main/res/layout/fragment_musician_profile.xml
+++ b/app/src/main/res/layout/fragment_musician_profile.xml
@@ -82,7 +82,7 @@
             android:layout_marginRight="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_border2"
+            android:background="@drawable/button_border_black"
             android:text="Book Request"/>
 
     </LinearLayout>
