--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,11 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/primaryOrange</item>
+        <item name="android:shadowColor">@color/primaryDark</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
         <!--<item name="buttonPrimary">@color/primaryButton</item>-->
     </style>
 
@@ -23,11 +27,11 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primaryDark</item>
         <item name="colorAccent">@color/primaryDark</item>
-        <item name="android:buttonTint">@color/primaryDark</item>
+        <item name="buttonTint">@color/primaryDark</item>
         <item name="android:textColor">@color/primaryDark</item>
         <item name="android:spinnerDropDownItemStyle">@style/MySpinnerStyle</item>
         <item name="android:textViewStyle">@style/AppTheme.Primary</item>
-        <item name="android:titleTextColor">@color/primaryDark</item>
+        <item name="titleTextColor">@color/primaryDark</item>
         <item name="android:colorForeground">@color/primaryDark</item>
         <!--<item name="android:foreground">@color/primaryDark</item>-->
         <!--<item name="android:foregroundTint">@color/primaryDark</item>-->
@@ -58,12 +62,19 @@
     </style>
     <style name="AppTheme.Primary">
         <item name="android:textColor">@color/colorAccent</item>
-        <item name="android:buttonTint">@color/colorAccent</item>
-        <item name="android:backgroundTint">@color/colorAccent</item>
+        <item name="buttonTint">@color/colorAccent</item>
+        <item name="backgroundTint">@color/colorAccent</item>
         <item name="android:textColorHint">@color/colorAccent</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
+    <style name="labeltextprimary">
+        <item name="android:textColorHint">@color/primaryOrange</item>
+        <item name="colorAccent">@color/primaryOrange</item>
+        <item name="colorControlNormal">@color/primaryOrange</item>
+        <item name="colorControlActivated">@color/primaryOrange</item>
     </style>
 </resources>
