--- a/app/src/main/res/layout/activity_create_gig.xml
+++ b/app/src/main/res/layout/activity_create_gig.xml
@@ -69,11 +69,19 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+                    <!--<EditText-->
+                        <!--android:id="@+id/tv_location_creategigactivity"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:hint="Location"/>-->
                     <EditText
                         android:id="@+id/tv_location_creategigactivity"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Location"/>
+                        android:ems="10"
+                        android:hint="Location" >
+
+                    </EditText>
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
