add youtube video and update push notification

--- a/app/src/main/res/layout/activity_book_musician.xml
+++ b/app/src/main/res/layout/activity_book_musician.xml
@@ -116,7 +116,8 @@
                         android:id="@+id/et_location_bookmusicianactivity"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Location"/>
+                        android:hint="Location"
+                        android:focusable="false" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
