--- a/app/src/main/res/layout/activity_create_gig.xml
+++ b/app/src/main/res/layout/activity_create_gig.xml
@@ -79,7 +79,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="Location" >
+                        android:hint="Location"
+                        android:focusable="false">
 
                     </EditText>
                 </android.support.design.widget.TextInputLayout>
