--- a/app/src/main/res/layout/fragment_gig_profile.xml
+++ b/app/src/main/res/layout/fragment_gig_profile.xml
@@ -1,7 +1,16 @@
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_centerVertical="true"
+    android:fillViewport="false">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     tools:context="com.gighub.app.ui.fragment.GigProfileFragment"
     android:orientation="vertical">
 
@@ -39,6 +48,43 @@
         android:layout_height="wrap_content"
         android:text="Tanggal Selesai" />
 
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Organizer :"
+        android:textSize="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <com.github.siyamed.shapeimageview.CircularImageView
+            android:id="@+id/img_organizer_photo_gigprofile"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="left"
+            android:src="@drawable/default_user"/>
+        <LinearLayout
+            android:layout_marginLeft="20dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_organizer_name_gigprofile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Organizer Name"/>
+            <TextView
+                android:id="@+id/tv_organizer_email_gigprofile"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Organizer Email"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
     <Button
         android:layout_marginTop="20dp"
         android:id="@+id/btn_offer_gig_gigprofile"
@@ -56,3 +102,4 @@
         android:text="View In Map"/>
 
 </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
