--- a/app/src/main/res/layout/fragment_musician_profile.xml
+++ b/app/src/main/res/layout/fragment_musician_profile.xml
@@ -77,6 +77,17 @@
             android:gravity="center"/>
 
         <Button
+            android:id="@+id/btn_youtubevideo_musicianprofile"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_border_black"
+            android:text="Youtube Video"/>
+
+
+        <Button
             android:id="@+id/btn_book_request_musicianprofile"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -86,5 +97,7 @@
             android:text="Book Request"/>
 
     </LinearLayout>
+
+
 
 </android.support.v4.widget.NestedScrollView>
