--- a/app/src/main/res/layout/activity_create_gig.xml
+++ b/app/src/main/res/layout/activity_create_gig.xml
@@ -51,6 +51,21 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:id="@+id/img_photo_gig_creategigactivity"
+                    android:src="@android:drawable/ic_menu_gallery"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
+                <Button
+                    android:id="@+id/btn_upload_gig_photo_creategigactivity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="upload Photo"
+                    android:textColor="@color/colorAccent"
+                    android:background="@drawable/button_border_white"
+                    android:elevation="4dp"/>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
