--- a/app/src/main/res/layout/activity_create_band.xml
+++ b/app/src/main/res/layout/activity_create_band.xml
@@ -16,6 +16,22 @@
     android:orientation="vertical"
     tools:context=".ui.activity.CreateBandActivity">
 
+    <ImageView
+        android:id="@+id/img_photo_band_createband"
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
+    <Button
+        android:id="@+id/btn_upload_band_photo_createband"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="upload Photo"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/colorAccent"
+        android:background="@drawable/button_border_white"
+        android:elevation="4dp"/>
+
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
